[package]
name = "samplr"
version = "0.1.0"
authors = ["Ben Steadman <steadmanben1@gmail.com>"]
description = "CLI tool to randomly sample data" 
homepage = "https://github.com/SteadBytes/samplr"
repository = "https://github.com/SteadBytes/samplr"
readme = "README.md"
license = "MIT"
keywords = ["cli", "sampling", "statistics"]
categories = ["command-line-utilities", "mathematics"]
edition = "2021"

[features]
statistical_tests=[]

[dependencies]
clap = "2.33.3"
rand = "0.8.4"

[dev-dependencies]
assert_approx_eq = "1.1.0"
rand_distr = "0.4.2"
test-case = "1.2.1"
